main part of the body added

--- a/index.html
+++ b/index.html
@@ -20,6 +20,62 @@
             </div>
         </header>
         <main>
+            <section class="failure-section">
+
+                <img class="my-image" src="images/person.png" alt="">
+                
+                </div>
+                <div class="my-fails">
+                    <h3 class="section-title">My failures of previous year</h3>
+
+                    <p class="list-description">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock.</p>
+
+                    <!-- then hexcode character for showing checkmark is &#x2714-->
+                    <div class="list-of-my-fails">
+                        <p>&#x2714 Contrary to popular belief, is not simply.</p>
+                        <p>&#x2714 Contrary to popular belief, is not simply.</p>
+                        <p>&#x2714 Contrary to popular belief, is not simply.</p>
+                        <p>&#x2714 Contrary to popular belief, is not simply.</p>
+                        <p>&#x2714 Contrary to popular belief, is not simply.</p>
+                    </div>
+                </div>
+            </section>
+
+            <section class="plans-section">
+                <h3 class="section-title">My Plans</h3>
+                <div class="my-plans-container">
+                    <div>
+                        <img src="images/icons/web.png" alt="">
+                        <h4 class="plan-title">Web Development</h4>
+                        <p class="plane-description">I want to start</p>
+                    </div>
+                    <div>
+                        <img src="images/icons/js.png" alt="">
+                        <h4 class="plan-title">Javascript</h4>
+                        <p class="plane-description">I want to learn</p>
+                    </div>
+                    <div>
+                        <img src="images/icons/smoke.png" alt="">
+                        <h4 class="plan-title">Smoking Habit</h4>
+                        <p class="plane-description">I want to end</p>
+                    </div>
+                    <div>
+                        <img src="images/icons/ecom.png" alt="">
+                        <h4 class="plan-title">Ecommerce</h4>
+                        <p class="plane-description">I want to develop</p>
+                    </div>
+                </div>
+            </section>
+
+            <section class="call-now-section">
+
+                <div class="quote-and-button">
+                    <h3 class="call-now-section-quote">Awlays keep a positive mindset</h3>
+                    <button class="btn-primary">Call Now</button>
+                </div>
+
+            </section>
+
 
         </main>
         
