--- a/index.html
+++ b/index.html
@@ -79,8 +79,26 @@
 
         </main>
         
-        <footer>
-
+        <footer class="footer">
+            <div class="contact-subscribe-section">
+                <div class="contact-info">
+                    <h3 class="contact-info-title">Future</h3>
+                    <p class="contact-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words</p>
+                    <p id="email" class="contact-description">Email : info@gmail.com</p>
+                    <p  id="phone" class="contact-description" >Phone : 01500 00 00 00</p>
+                    <div class="social-media-link">
+                        <a href=""><img src="images/icons/fb.png" alt=""></a>
+                        <a href=""><img src="images/icons/twitter.png" alt=""></a>
+                        <a href=""><img src="images/icons/youtube.png" alt=""></a>
+                    </div>
+                </div>
+                <div class="subscribe-section">
+                    <h4 class="subscribe-section-title">Subscribe</h4>
+                    <input type="mail" placeholder="Enter your email" class="input-mail">
+                    <br>
+                    <button class="subscribe-btn">Subscribe</button>
+                </div>
+            </div>
         </footer>
     </body>
 </html>
