--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
 
                     <!-- then hexcode character for showing checkmark is &#x2714-->
                     <div class="list-of-my-fails">
-                        <p>&#x2714 Contrary to popular belief, is not simply.</p>
-                        <p>&#x2714 Contrary to popular belief, is not simply.</p>
-                        <p>&#x2714 Contrary to popular belief, is not simply.</p>
-                        <p>&#x2714 Contrary to popular belief, is not simply.</p>
-                        <p>&#x2714 Contrary to popular belief, is not simply.</p>
+                        <p>&#x2714 Zero skill gained.</p>
+                        <p>&#x2714 Fitness goal was not achieved.</p>
+                        <p>&#x2714 No character development.</p>
+                        <p>&#x2714 Python learning goal was not achieved.</p>
+                        <p>&#x2714 No improvement in academics.</p>
                     </div>
                 </div>
             </section>
